Bug 98284 - FILEOPEN: DOC: Fields do not auto-update on file open in MS Word, but they do in LO.
Summary: FILEOPEN: DOC: Fields do not auto-update on file open in MS Word, but they do...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:26.8.0
Keywords: filter:doc
Depends on:
Blocks: DOC-Fields
  Show dependency treegraph
 
Reported: 2016-02-29 20:25 UTC by Aldo
Modified: 2026-04-22 00:55 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
In Bug4.zip file there are Bug4.doc and Bug4.pdf (63.23 KB, application/x-zip-compressed)
2016-02-29 20:25 UTC, Aldo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aldo 2016-02-29 20:25:43 UTC
Created attachment 123091 [details]
In Bug4.zip file there are Bug4.doc and Bug4.pdf

When I open the file with write appears 'MACRO CARRIER', in Bug4.pdf file the proper display obtained with MSOffice 2013.
Comment 1 Buovjaga 2016-03-09 09:51:47 UTC
Confirmed.

Win 7 Pro 64-bit, Version: 5.1.0.3 (x64)
Build ID: 5e3e00a007d9b3b6efb6797a8b8e57b51ab1f737
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
Locale: fi-FI (fi_FI)

Version: 5.2.0.0.alpha0+
Build ID: b89feb8018bf3610faf01e73995d576f6566e20b
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-03-07_03:36:17
Locale: fi-FI (fi_FI)
Comment 2 QA Administrators 2017-12-11 08:53:24 UTC Comment hidden (noise)
Comment 3 QA Administrators 2019-12-12 03:40:17 UTC Comment hidden (noise)
Comment 4 QA Administrators 2021-12-12 04:21:16 UTC Comment hidden (noise)
Comment 5 Justin L 2023-05-25 00:39:17 UTC
I know this problem very well, but I don't see an existing bug report about it.

MS Word does not automatically update fields to point to their variable values on file open. Instead, it just displays the last-saved-text. It is only when the user selects the field and presses F9 that the contents of the field change to match the variable's value.

In this document, when the field is updated, it displays MACRO CARRIER - which is the File - Properties - Title of the document.

LO automatically displays the variable in the field, and updates as soon as the variable changes (which seems very sensible...).

So for compatibility, LO needs to add a flag to variables to soft-lock the imported contents until they get an user-initiated refresh.
Comment 6 Justin L 2023-07-14 11:06:46 UTC
I started putting some notes together about fields. I hope it helps. Feel free to modify/update the wiki document. https://wiki.documentfoundation.org/Documentation/Fields
Comment 7 Justin L 2023-08-03 20:36:41 UTC Comment hidden (obsolete)
Comment 8 giovani 2023-08-16 21:07:25 UTC Comment hidden (off-topic)
Comment 9 giovani 2023-08-16 21:12:59 UTC Comment hidden (no-value)
Comment 10 Justin L 2026-04-18 14:09:04 UTC
This fix depends on 26.8's bug 156499 - which fixed docx.
https://gerrit.libreoffice.org/c/core/+/203848
Comment 11 Commit Notification 2026-04-21 23:05:47 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c13b77c6cf62ae0d172291a2b08d08203a4f6fa5

tdf#98284 ww8import: softLock DocInfo fields

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.