tdf#98284 ww8import: softLock DocInfo fields

This patch depends on co-26.04's tdf#156499 for DOCX.

When MS Word opens a document,
it does NOT update the fields with the current variable value.
(Well, except for the SAVEDATE field,
 and PRINTDATE needs to be updatable if a print is requested.)

However, MS Word's fields can always be updated via the F9 key.
So the new LO SubSoftFixed property keeps a field locked
until it has been manually refreshed.

make CppunitTest_sw_ww8export4 \
    CPPUNIT_TEST_NAME=testTdf98284_softLockedFields

Change-Id: I5e5a96c52f8294faa45dd8f5d4c6f3f61adccfea
Reviewed-on: https://gerrit.collaboraoffice.com/c/core/+/1141
Tested-by: Jenkins CPCI <releng@collaboraoffice.com>
Reviewed-by: Justin Luth <justin.luth@collabora.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>